kubernetes/apps/base/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  dependsOn:
    - name: infra-controllers
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n
          ports:
          - containerPort: 5678
#          startupProbe:
#            httpGet:
#              path: /healthz
#              port: 5678
#            failureThreshold: 60
#            periodSeconds: 10
#          readinessProbe:
#            httpGet:
#              path: /healthz
#              port: 5678
#            initialDelaySeconds: 10
#            periodSeconds: 10
#          livenessProbe:
#            httpGet:
#              path: /healthz
#              port: 5678
#            initialDelaySeconds: 30
#            periodSeconds: 10
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
