kubernetes/apps/base/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - n8n.kclabcloud.com
      secretName: n8n-tls
  rules:
    - host: n8n.kclabcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
